NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Beginning_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>NATT_Beginning_Date_Time__c</fullName>
    <inlineHelpText>Identify the date and time in the Unit Download that is in question</inlineHelpText>
    <label>Beginning Date/Time</label>
    <type>DateTime</type>
</CustomField>