NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Case_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>NATT_Case_Close_Reason__c</fullName>
    <description>Reason required to close case</description>
    <inlineHelpText>Reason required to close case</inlineHelpText>
    <label>Case Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provided Technical Information</fullName>
            </value>
            <value>
                <fullName>Shipped Parts</fullName>
            </value>
            <value>
                <fullName>Addressed Billing Discrepancy</fullName>
            </value>
            <value>
                <fullName>Dealer/Customer Resolved</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>