NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Case_Creation_Email__c.field-meta.xml
<CustomField>
    <fullName>NATT_Case_Creation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This allows user or case owner to send email notification when a case is created and the case creation email is selected</description>
    <label>Case Creation Email</label>
    <type>Checkbox</type>
</CustomField>