NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>NATT_Case_Reason__c</fullName>
    <inlineHelpText>Reason that the Case is being created</inlineHelpText>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Management Issues</fullName>
            </value>
            <value>
                <fullName>Alarm</fullName>
            </value>
            <value>
                <fullName>Annual Returns</fullName>
            </value>
            <value>
                <fullName>Application Issue</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>Back Order</fullName>
            </value>
            <value>
                <fullName>Batch Issues</fullName>
                <isActive>false</isActive>
                <label>Batch Issues</label>
            </value>
            <value>
                <fullName>Cancellations</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
                <isActive>false</isActive>
                <label>Change</label>
            </value>
            <value>
                <fullName>Change existing billing address</fullName>
            </value>
            <value>
                <fullName>Change existing shipping address</fullName>
            </value>
            <value>
                <fullName>Claim Rejection or Appeals</fullName>
            </value>
            <value>
                <fullName>Claim Update</fullName>
            </value>
            <value>
                <fullName>Commissioning Issues</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Concealed Damage</fullName>
            </value>
            <value>
                <fullName>Concession Request</fullName>
            </value>
            <value>
                <fullName>Consolidated Billing</fullName>
                <isActive>false</isActive>
                <label>Consolidated Billing</label>
            </value>
            <value>
                <fullName>Contract Issues</fullName>
            </value>
            <value>
                <fullName>Core Return</fullName>
            </value>
            <value>
                <fullName>Coverage Information</fullName>
            </value>
            <value>
                <fullName>Coverage Terms</fullName>
                <isActive>false</isActive>
                <label>Coverage Terms</label>
            </value>
            <value>
                <fullName>CPEC</fullName>
                <isActive>false</isActive>
                <label>CPEC</label>
            </value>
            <value>
                <fullName>Credit Memos</fullName>
            </value>
            <value>
                <fullName>Credits</fullName>
            </value>
            <value>
                <fullName>Customer Ordered in Error</fullName>
            </value>
            <value>
                <fullName>Damages</fullName>
            </value>
            <value>
                <fullName>Data Feed</fullName>
                <isActive>false</isActive>
                <label>Data Feed</label>
            </value>
            <value>
                <fullName>Deductible for a Repeat Charge</fullName>
                <isActive>false</isActive>
                <label>Deductible for a Repeat Charge</label>
            </value>
            <value>
                <fullName>Defective Shelf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>