NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>NATT_Case_Resolution__c</fullName>
    <inlineHelpText>Please describe the resolution for the Case.</inlineHelpText>
    <label>Case Resolution</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>