NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Close_Case__c.field-meta.xml
<CustomField>
    <fullName>NATT_Close_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This user can send email notification when close case checkbox is selected</description>
    <label>Close Case</label>
    <type>Checkbox</type>
</CustomField>