NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>NATT_Close_Reason__c</fullName>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access canceled</fullName>
            </value>
            <value>
                <fullName>Addressed Billing Discrepancy</fullName>
            </value>
            <value>
                <fullName>Administrative Information Provided</fullName>
            </value>
            <value>
                <fullName>Administrative Support Provided</fullName>
            </value>
            <value>
                <fullName>Antenna change</fullName>
            </value>
            <value>
                <fullName>Approval denied</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>B.O. attended</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Cancellation and uninstallation performed</fullName>
            </value>
            <value>
                <fullName>Change Completed</fullName>
            </value>
            <value>
                <fullName>Change denied</fullName>
            </value>
            <value>
                <fullName>Change made</fullName>
            </value>
            <value>
                <fullName>Change not completed</fullName>
            </value>
            <value>
                <fullName>Claim Updated</fullName>
            </value>
            <value>
                <fullName>Counterproposal sent</fullName>
            </value>
            <value>
                <fullName>Credit granted</fullName>
            </value>
            <value>
                <fullName>Credit Issued</fullName>
            </value>
            <value>
                <fullName>Deadline informed</fullName>
            </value>
            <value>
                <fullName>Dealer/Customer Resolved Issue</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Denied(Expired)</fullName>
            </value>
            <value>
                <fullName>Denied credit increase</fullName>
            </value>
            <value>
                <fullName>Duplicate Issue</fullName>
            </value>
            <value>
                <fullName>End of contract</fullName>
            </value>
            <value>
                <fullName>Equipment replaced</fullName>
            </value>
            <value>
                <fullName>Equipment replacement</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>