NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Close_Reason_Explanation__c.field-meta.xml
<CustomField>
    <fullName>NATT_Close_Reason_Explanation__c</fullName>
    <description>When Close reason &quot;Other&quot; is selected; then user MUST enter reason for selecting &quot;Other&quot; value</description>
    <inlineHelpText>When Close reason &quot;Other&quot; is selected; then user MUST enter reason for selecting &quot;Other&quot; value</inlineHelpText>
    <label>Close Reason Explanation</label>
    <type>TextArea</type>
</CustomField>