NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Concern_Happened_During_Pre_Trip__c.field-meta.xml
<CustomField>
    <fullName>NATT_Concern_Happened_During_Pre_Trip__c</fullName>
    <label>Concern Happened During Pre-Trip</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>