NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Contact_Number__c</fullName>
    <formula>Owner:User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Number</label>
    <type>Text</type>
</CustomField>