NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Core_Items_Rcv_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Items_Rcv_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When all Core Items are received the Case Contact is notified.  This field is used to prevent duplicate notifications.</description>
    <label>Core Items Received Notification Sent</label>
    <type>Checkbox</type>
</CustomField>