NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Core_Return_Loc_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Loc_Zip_Postal_Code__c</fullName>
    <formula>NATT_Core_Return_Location_Account__r.NATT_Zip_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Return Location Zip/Postal Code</label>
    <type>Text</type>
</CustomField>