NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Core_Return_Location_Account__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core Return Location Account</label>
    <referenceTo>NATT_Core_Return_Location__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>