NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Core_Return_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location_Address__c</fullName>
    <formula>IF(NATT_Core_Return_Location_Account__r.NATT_Core_Return_Location_Street__c &lt;&gt; &quot;&quot;,NATT_Core_Return_Location_Account__r.NATT_Core_Return_Location_Street__c + BR(),NULL) +
IF(NATT_Core_Return_Location_Account__r.NATT_Core_Return_Location_City__c &lt;&gt; &quot;&quot;,NATT_Core_Return_Location_Account__r.NATT_Core_Return_Location_City__c + &quot;, &quot;,NULL) +
TEXT(NATT_Core_Return_Location_Account__r.NATT_Core_Return_Location_State_Province__c) + &quot; &quot; +  NATT_Core_Return_Location_Account__r.NATT_Zip_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Return Location Address</label>
    <type>Text</type>
</CustomField>