NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Core_Return_Location_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location_Business_Name__c</fullName>
    <formula>NATT_Core_Return_Location_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Return Location Business Name</label>
    <type>Text</type>
</CustomField>