NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Core_Return_Location_City__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location_City__c</fullName>
    <formula>NATT_Core_Return_Location_Account__r.NATT_Core_Return_Location_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Return Location City</label>
    <type>Text</type>
</CustomField>