NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Core_Return_Location_Contact__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location_Contact__c</fullName>
    <formula>NATT_Core_Return_Location_Account__r.NATT_Core_Return_Location_Contact__r.FirstName &amp; &quot; &quot; &amp;  NATT_Core_Return_Location_Account__r.NATT_Core_Return_Location_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Return Location Contact</label>
    <type>Text</type>
</CustomField>