NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Core_Return_Location_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location_Contact_Email__c</fullName>
    <formula>NATT_Core_Return_Location_Account__r.NATT_Core_Return_Location_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Return Location Contact Email</label>
    <type>Text</type>
</CustomField>