NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Core_Return_Location_State_Province__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location_State_Province__c</fullName>
    <formula>Text( NATT_Core_Return_Location_Account__r.NATT_Core_Return_Location_State_Province__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Return Location State/Province</label>
    <type>Text</type>
</CustomField>