NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Core_Return_Location_Street__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location_Street__c</fullName>
    <formula>NATT_Core_Return_Location_Account__r.NATT_Core_Return_Location_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Return Location Street</label>
    <type>Text</type>
</CustomField>