NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Credits_Applied__c.field-meta.xml
<CustomField>
    <fullName>NATT_Credits_Applied__c</fullName>
    <formula>IF( ISBLANK( NATT_Order_Number__r.Id ) ,   NATT_Credits_Applied_Admin__c  , IF(  RecordType.DeveloperName  = &quot;NATT_Core_Returns&quot;,  NATT_Order_Number__r.TotalAmount , 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credits Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>