NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Credits_Applied_Admin__c.field-meta.xml
<CustomField>
    <fullName>NATT_Credits_Applied_Admin__c</fullName>
    <description>Manually entry for Credits Applied if the Order is not linked to the Case.</description>
    <label>Credits Applied - Admin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>