NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Customer__c.field-meta.xml
<CustomField>
    <fullName>NATT_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>End User specified for this case.</inlineHelpText>
    <label>Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Customer, CTM Customer, CTBR Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>