NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Customer_Inquiry_Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>NATT_Customer_Inquiry_Days_to_Close__c</fullName>
    <description>Used to store Days to Close from Customer Inquiry data load.</description>
    <inlineHelpText>Reference for legacy data migrated</inlineHelpText>
    <label>Customer Inquiry - Days to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>