NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Customer_Inquiry_History_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Customer_Inquiry_History_Number__c</fullName>
    <description>Legacy Customer Inquiry number for Case data migration</description>
    <inlineHelpText>Reference for legacy data migrated</inlineHelpText>
    <label>Supplier RMA Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>