NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Customer_Inquiry_Inquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Customer_Inquiry_Inquiry_Date__c</fullName>
    <label>Customer Inquiry - Inquiry Date</label>
    <type>Date</type>
</CustomField>