NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Customer_Inquiry_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Customer_Inquiry_PO_Number__c</fullName>
    <label>Customer Inquiry - Purchase Order Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>