NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Date_of_Entry__c.field-meta.xml
<CustomField>
    <fullName>NATT_Date_of_Entry__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date of Entry</label>
    <type>Date</type>
</CustomField>