NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Default_Queue__c.field-meta.xml
<CustomField>
    <fullName>NATT_Default_Queue__c</fullName>
    <description>Used in Flow logic</description>
    <inlineHelpText>Used to assign new Dealer generated Cases for a Queue for processing.</inlineHelpText>
    <label>Default Queue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NATT_Application_Engineering</fullName>
            </value>
            <value>
                <fullName>NATT_BluEdge_Warranty</fullName>
            </value>
            <value>
                <fullName>NATT_Core_Returns</fullName>
            </value>
            <value>
                <fullName>NATT_eSolutions</fullName>
                <label>Lynx Fleet</label>
            </value>
            <value>
                <fullName>NATT_Performance_Parts</fullName>
            </value>
            <value>
                <fullName>NATT_Product_Support</fullName>
            </value>
            <value>
                <fullName>NATT_Service_Engineering_Field_Service</fullName>
            </value>
            <value>
                <fullName>NATT_Unit_Sales</fullName>
            </value>
            <value>
                <fullName>NATT_Warehouse</fullName>
            </value>
            <value>
                <fullName>CTM_Customer_Service</fullName>
            </value>
            <value>
                <fullName>CTM_eSolutions</fullName>
            </value>
            <value>
                <fullName>CTM_Finance</fullName>
            </value>
            <value>
                <fullName>CTM_Performance_Parts</fullName>
            </value>
            <value>
                <fullName>CTM_Service_Engineering_Field_Service</fullName>
            </value>
            <value>
                <fullName>CTM_Warranty</fullName>
            </value>
            <value>
                <fullName>CTM_Unit_Sales</fullName>
            </value>
            <value>
                <fullName>CTBR_Container</fullName>
            </value>
            <value>
                <fullName>CTBR_Finance</fullName>
            </value>
            <value>
                <fullName>CTBR_Lynx_Fleet</fullName>
            </value>
            <value>
                <fullName>CTBR_Parts_T_T</fullName>
            </value>
            <value>
                <fullName>CTBR_Unit_Sales</fullName>
            </value>
            <value>
                <fullName>CTBR_Warranty</fullName>
            </value>
            <value>
                <fullName>CTBR_Customer_Service</fullName>
            </value>
            <value>
                <fullName>CTBR_Warehouse</fullName>
            </value>
            <value>
                <fullName>CTBR_IT</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>