NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Disputed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Disputed_Quantity__c</fullName>
    <description>Disputed Quantity</description>
    <inlineHelpText>Disputed Quantity</inlineHelpText>
    <label>Disputed Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>