NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_EAR_Attached__c.field-meta.xml
<CustomField>
    <fullName>NATT_EAR_Attached__c</fullName>
    <description>Checks to see if an Engine Authorization Request is attached</description>
    <label>EAR Attached</label>
    <summaryForeignKey>Engine_Authorization_Request__c.NATT_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>