NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_EES_Data_Downloaded__c.field-meta.xml
<CustomField>
    <fullName>NATT_EES_Data_Downloaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EES Data Downloaded</label>
    <type>Checkbox</type>
</CustomField>