NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Engine_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Engine_Serial_Number__c</fullName>
    <label>Engine Serial Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>