NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Engine_Series__c.field-meta.xml
<CustomField>
    <fullName>NATT_Engine_Series__c</fullName>
    <label>Engine Series</label>
    <length>255</length>
    <type>Text</type>
</CustomField>