NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Injector_1__c.field-meta.xml
<CustomField>
    <fullName>NATT_Injector_1__c</fullName>
    <label>Injector 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>