NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Injector_1_Pattern__c.field-meta.xml
<CustomField>
    <fullName>NATT_Injector_1_Pattern__c</fullName>
    <label>Injector 1 Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Not OK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>