NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>NATT_Internal_Comments__c</fullName>
    <inlineHelpText>For comments visible only to internal users</inlineHelpText>
    <label>Internal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>