NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Internal_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Internal_Invoice_Number__c</fullName>
    <inlineHelpText>This is the invoice number from the Core Return Location.  Please use commas to separate number if more than one is required.</inlineHelpText>
    <label>Internal Invoice Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>