NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Invoice_Number__c</fullName>
    <description>Invoice Number</description>
    <inlineHelpText>Invoice Number</inlineHelpText>
    <label>Dealer Invoice Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>