NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Is_Case_Creater__c.field-meta.xml
<CustomField>
    <fullName>NATT_Is_Case_Creater__c</fullName>
    <formula>IF(AccountId = $User.User_Account__c,true,false)</formula>
    <label>Dealership Case</label>
    <type>Checkbox</type>
</CustomField>