NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_JDE_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Sales_Order__c</fullName>
    <formula>IF( ISBLANK( NATT_Order_Number__r.Id ) ,  NATT_JDE_SO_Admin__c , NATT_Order_Number__r.NATT_JDE_Sales_Order_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Sales Order #</label>
    <type>Text</type>
</CustomField>