NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_JDE_SO_Admin__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_SO_Admin__c</fullName>
    <description>Manual Input field for Core Returns Processing if Credit Order is not Linked to Case.</description>
    <label>Carrier SO# - Admin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>