NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Model_Number__c</fullName>
    <label>Model Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>