NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Number_of_Case_Sales_Order_Records__c.field-meta.xml
<CustomField>
    <fullName>NATT_Number_of_Case_Sales_Order_Records__c</fullName>
    <description>For select Performance Parts Cases the user is required to attach Case - Sales Orders</description>
    <label>Number of Case Line Items</label>
    <summaryForeignKey>NATT_Case_Sales_Order__c.NATT_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>