NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Number_of_Linked_Order_Products__c.field-meta.xml
<CustomField>
    <fullName>NATT_Number_of_Linked_Order_Products__c</fullName>
    <label>Number of Linked Order Products</label>
    <summaryForeignKey>NATT_Case_Sales_Order__c.NATT_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>