NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Number_of_Return_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>NATT_Number_of_Return_Line_Items__c</fullName>
    <label>Number of Return Line Items</label>
    <summaryForeignKey>NATT_Return_Item__c.NATT_Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>