NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Order for credits applied to Core Returns</inlineHelpText>
    <label>Salesforce Order Number</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>