NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Order_Product_lookup1__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order_Product_lookup1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product lookup1</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>