NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Packer__c.field-meta.xml
<CustomField>
    <fullName>NATT_Packer__c</fullName>
    <description>Packer #</description>
    <inlineHelpText>Packer #</inlineHelpText>
    <label>Packer #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>