NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Packing_Slip_Quantity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Packing_Slip_Quantity__c</fullName>
    <description>Packing Slip Quantity</description>
    <inlineHelpText>Packing Slip Quantity</inlineHelpText>
    <label>Packing Slip Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>