NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Part_Status__c.field-meta.xml
<CustomField>
    <fullName>NATT_Part_Status__c</fullName>
    <description>Part Status</description>
    <inlineHelpText>Part Status</inlineHelpText>
    <label>Part Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status1</fullName>
            </value>
            <value>
                <fullName>Status2</fullName>
            </value>
            <value>
                <fullName>Status3</fullName>
            </value>
            <value>
                <fullName>Status4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>