NATTQA-ENV/force-app/main/default/objects/Case/fields/NATT_Picker__c.field-meta.xml
<CustomField>
    <fullName>NATT_Picker__c</fullName>
    <description>Picker</description>
    <inlineHelpText>Picker</inlineHelpText>
    <label>Picker</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>